--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ mvc:
    iex:
       getAllSymbolsPath: /iex/symbols
       getLastTradedPricePath: /iex/lastTradedPrice
+      getHistoricalPricesPath: /iex/historicalPrices
    max-size-trace-payload: 50000
 jms:
    listener-concurrency: 1-5
@@ -47,7 +48,7 @@ spring:
    rest:
       # this points at the local WireMock server in the test environment.
       iexBasePath: http://localhost:${wiremock.server.port}/
-
+      iexCloudToken: pk_398f22558d024d7ca05e79961bfdb3f7
 ---
 # Dev properties go here
 spring:
@@ -57,6 +58,8 @@ spring:
       password:
    rest:
       iexBasePath: https://api.iextrading.com/1.0
+      iexCloudPath: https://cloud.iexapis.com/v1
+      iexCloudToken: pk_398f22558d024d7ca05e79961bfdb3f7
 # set debug to get spring to log the classpath (and other things) on startup
 debug: true
 
