--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,7 +50,7 @@ spring:
       # this points at the local WireMock server in the test environment.
       iexBasePath: http://localhost:${wiremock.server.port}/
       iexCloudPath: http://localhost:${wiremock.server.port}/
-      iexCloudToken: pk_398f22558d024d7ca05e79961bfdb3f7
+      iexCloudToken: pk_test-token
 ---
 # Dev properties go here
 spring:
@@ -61,7 +61,7 @@ spring:
    rest:
       iexBasePath: https://api.iextrading.com/1.0
       iexCloudPath: https://cloud.iexapis.com/v1
-      iexCloudToken: pk_398f22558d024d7ca05e79961bfdb3f7
+      iexCloudToken: ${IEX_TOKEN}
 # set debug to get spring to log the classpath (and other things) on startup
 debug: true
 
